css/layout.css
/* ... */
em,
li,
li a {
  font-size: 16px;
  font-weight: 500;
  font-family: 'Open Sans', sans-serif;
  color: #515769;
}

a {
  font-family: 'Open Sans', sans-serif;
  color: #81848f;
  outline: 0;
}

a:focus, a:hover, a:active {
  outline: 0;
  color: #999caa;
  text-decoration: none;
}

.link {
  position: relative;
  font-size: 13px;
  font-weight: 600;
  font-family: 'Open Sans', sans-serif;
  text-transform: uppercase;
}

.link:after {
  position: absolute;
  top: 8px;
  right: -15px;
  width: 9px;
  height: 2px;
  background: #063b73;
  content: " ";
}

span {
  font-size: 14px;
  font-weight: 400;
  font-family: 'Open Sans', sans-serif;
  color: #bfc1c7;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  font-family: 'Playfair Display', serif;
  color: #515769;
  line-height: 1.4;
  margin: 0 0 15px;
}

h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
  color: #515769;
}

h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover {
  color: #999caa;
  text-decoration: none;
}

h1 > a:focus, h2 > a:focus, h3 > a:focus, h4 > a:focus, h5 > a:focus, h6 > a:focus {
  text-decoration: none;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 22px;
}

h4 {
  font-size: 22px;
}

h5{
  font-size: 18px;
}

::selection {
  color: #fff;
  background: #063b73;
  text-shadow: none;
}

::-webkit-selection {
  color: #fff;
  background: #063b73;
  text-shadow: none;
}

::-moz-selection {
  color: #fff;
  background: #063b73;
  text-shadow: none;
}

:active,
:focus {
  outline: none;
}

/* Section Seperator */
.section-seperator {
  border-bottom: 1px solid #edf0f2;
}

/* Content Wrapper Link */
.content-wrapper-link {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
  z-index: 3;
  text-decoration: none;
}

/*------------------------------------------------------------------
  	[Button]
------------------------------------------------------------------*/
.btn-theme {
  position: relative;
  display: inline-block;
  line-height: 1.4;
  text-align: center;
  background-image: none;
  border-style: solid;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.btn-theme:focus, .btn-theme:active:focus, .btn-theme.active:focus, .btn-theme.focus, .btn-theme:active.focus, .btn-theme.active.focus {
  outline: none;
}

.btn-theme:hover {
  transition-duration: 300ms;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
}

.btn-theme:hover, .btn-theme:focus, .btn-theme.focus {
  text-decoration: none;
}

.btn-theme:active, .btn-theme.active {
  background-image: none;
  outline: 0;
}

.btn-theme.disabled, .btn-theme[disabled],
fieldset[disabled] .btn-theme {
  cursor: not-allowed;
  box-shadow: none;
  opacity: .65;
  pointer-events: none;
}

.btn-icon {
  position: relative;
  top: 1px;
  margin-right: 10px;
}

.btn-white-bg {
  color: #515769;
  background: #fff;
  border-color: transparent;
  border-width: 0;
}

.btn-white-bg:hover, .btn-white-bg:focus, .btn-white-bg.focus {
  color: #fff;
  background: #063b73;
  border-color: transparent;
}

.btn-white-brd {
  color: #fff;
  background: transparent;
  border-color: #fff;
  border-width: 2px;
}

.btn-white-brd:hover, .btn-white-brd:focus, .btn-white-brd.focus {
  color: #515769;
  background: #fff;
  border-color: #fff;
}

.btn-default-bg {
  color: #515769;
  background: #f3f4f5;
  border-color: transparent;
  border-width: 0;
}

.btn-default-bg:hover, .btn-default-bg:focus, .btn-default-bg.focus {
  color: #fff;
  background: #063b73;
  border-color: transparent;
}

.btn-theme-sm {
  font-size: 13px;
  font-weight: 600;
  padding: 15px 40px;
}

.btn-theme-md {
  font-size: 15px;
  font-weight: 600;
  padding: 20px 30px;
}

/*------------------------------------------------------------------
    [Progress Bar]
------------------------------------------------------------------*/
.progress-box .progress {
  box-shadow: none;
  height: 3px;
}

.progress-box .progress-bar {
  transition-duration: 2000ms;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
}

/*------------------------------------------------------------------
  	[Social Icons]
------------------------------------------------------------------*/
.social-icons {
  display: inline-block;
  width: 40px;
  height: 40px;
  font-size: 16px;
  color: #fff;
  text-align: center;
  border-radius: 50%;
  vertical-align: middle;
  padding: 11px;
  transition-duration: 300ms;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
}

.social-icons:hover {
  color: #515769;
  background: #fff;
  transition-duration: 300ms;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
}

/*------------------------------------------------------------------
  	[Promo Block]
------------------------------------------------------------------*/
.promo-block {
  padding: 220px 0 130px;
}

.promo-block .promo-block-title {
  font-size: 70px;
  color: #fff;
  line-height: 1;
}

@media (max-width: 480px) {
  .promo-block .promo-block-title {
    font-size: 50px;
  }
}

.promo-block .promo-block-text {
  font-size: 25px;
  color: #fff;
}

.promo-block .promo-block-divider {
  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
  padding-bottom: 20px;
  margin-bottom: 35px;
}

/*------------------------------------------------------------------
  	[Service]
------------------------------------------------------------------*/
.service {
  background: #fff;
  padding: 30px;
}
/* ... */

